plugins {
    id 'org.springframework.boot' version '2.5.12'
    id 'java'
}

def springVersion = "2.5.12"

version = "0.1.0"

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web:${springVersion}"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}"

    implementation 'org.postgresql:postgresql:42.3.3'
    implementation 'io.springfox:springfox-swagger2:2.7.0'
    implementation 'io.springfox:springfox-swagger-ui:2.7.0'

    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
}

bootJar {
    mainClassName = 'com.leskor.provider.App'
    archiveName = 'app.jar'
}

test {
    useJUnitPlatform()
}
